Fix margins,spacing,formatting on header,body1

--- a/style.css
+++ b/style.css
@@ -24,14 +24,14 @@ button {
     border: none;
     border-radius: 7px;
     padding: 10px;
-    margin: 4px 2px;
+    margin: 4px 0px;
     width: 130px;
 }
 
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #1F2937;
 }
 
@@ -40,33 +40,29 @@ button {
     align-items: center;
     font-size: 24px;
     color: #F9FAF8;
-    margin: 0px 250px;
 }
 
 .headright {
     display: flex;
     gap: 20px;
-    margin: 0px 250px;
 }
 
 .header img {
     max-width: 100px;
-    margin-right: 10px;
+    margin-right: 15px
 }
 
 .body1 {
     display: flex;
-    justify-content: space-between;
-    border: 3px solid green;
+    justify-content: space-around;
     background-color: #1F2937;
     flex: 1 1 auto;
+    padding: 20px;
 }
 
 .body1left {
     flex-wrap: wrap;
-    max-width: 300px;
-    margin-left: 250px;
-    padding: 30px;
+    max-width: 450px;
 }
 
 .body1left h2 {
@@ -81,8 +77,7 @@ button {
 }
 
 .body1right {
-    margin-right: 250px;
-    display: flex;
+    align-content: center;
 }
 
 .body1right img {
